[gd_scene load_steps=12 format=2]

[ext_resource path="res://classes/FX/glowerObject.gd" type="Script" id=1]
[ext_resource path="res://nodes/UI/battle/ConditionDisplay.tscn" type="PackedScene" id=2]
[ext_resource path="res://resources/images/Char/Jay/Jay.png" type="Texture" id=3]
[ext_resource path="res://nodes/UI/battle/Charge.tscn" type="PackedScene" id=5]
[ext_resource path="res://nodes/Battle/sprite_simple.gd" type="Script" id=6]

[sub_resource type="Animation" id=1]
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("SpriteHook/Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 0, 1, 1, 1 ),
"update": 1,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 100, 100, 100, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
tracks/0/type = "value"
tracks/0/path = NodePath("SpriteHook/Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
tracks/0/type = "value"
tracks/0/path = NodePath("SpriteHook/Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6, 0.8, 0.9 ),
"transitions": PoolRealArray( 6.27667, 12.1257, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 100, 100, 1 ), Color( 100, 100, 100, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.351434
tracks/0/type = "value"
tracks/0/path = NodePath("SpriteHook/Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 0, 1, 1, 1 ),
"update": 1,
"values": [ Color( 1, 1, 1, 1 ), Color( 100, 0, 0, 1 ), Color( 100, 100, 100, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
tracks/0/type = "value"
tracks/0/path = NodePath("SpriteHook/Sprite:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 0, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 100, 100, 100, 1 ), Color( 2, 1, 1, 1 ), Color( 0, 0, 100, 1 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="ShaderMaterial" id=6]

[node name="SpriteSimple" type="Node2D"]
script = ExtResource( 6 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/ACTION = SubResource( 1 )
anims/BEGIN = SubResource( 2 )
anims/CHARGE = SubResource( 3 )
anims/DAMAGE = SubResource( 4 )
anims/DEFEAT = SubResource( 5 )

[node name="SpriteHook" type="Position2D" parent="."]

[node name="Sprite" type="Sprite" parent="SpriteHook"]
position = Vector2( 0, -100 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 448, 177, 253, 205 )

[node name="Glows" type="Sprite" parent="SpriteHook/Sprite"]
modulate = Color( 1, 1, 1, 0.8 )
material = SubResource( 6 )
position = Vector2( -24, -15.4 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 250.9, 185.6, 192.5, 174.7 )
script = ExtResource( 1 )

[node name="Charge" parent="SpriteHook" instance=ExtResource( 5 )]
position = Vector2( 0, -100 )

[node name="Position2D" type="Position2D" parent="SpriteHook"]
z_index = 20

[node name="ConditionDisplay" parent="SpriteHook/Position2D" instance=ExtResource( 2 )]
margin_left = -80.0
margin_right = -80.0

[node name="EffectHook" type="Position2D" parent="."]
position = Vector2( 0, -100 )

[node name="EffectorHolder" type="Node2D" parent="EffectHook"]

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
